@@ -23,7 +23,7 @@
         <groupId>com.navercorp.pinpoint</groupId>
         <artifactId>pinpoint-profiler-optional-parent</artifactId>
         <relativePath>../profiler-optional-parent</relativePath>
-        <version>2.0.5-SNAPSHOT</version>
+        <version>2.6.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>pinpoint-profiler-optional-jdk9</artifactId>
@@ -32,14 +32,10 @@
     <description>pinpoint profiler optional package for jdk 9</description>
 
     <properties>
-        <jdk.version>9</jdk.version>
-        <jdk.home>${env.JAVA_9_HOME}</jdk.home>
-
-        <!-- http://openclover.org/ -->
-        <!-- https://bitbucket.org/openclover/clover/issues/61/430-support-java-9 -->
-        <!-- 4.3 will support java9 -->
-        <plugin.clover.skip>true</plugin.clover.skip>
-        <plugin.animal-sniffer.skip>true</plugin.animal-sniffer.skip>
+        <jdk.version>8</jdk.version>
+        <jdk.home>${env.JAVA_8_HOME}</jdk.home>
+<!--        <jdk.version>9</jdk.version>-->
+<!--        <jdk.home>${env.JAVA_9_HOME}</jdk.home>-->
     </properties>
 
     <dependencies>
@@ -64,29 +60,70 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Temporary patch for java9-->
+        <!-- Logging dependencies -->
         <dependency>
-            <groupId>org.openclover</groupId>
-            <artifactId>clover</artifactId>
-            <version>4.2.1</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals><goal>add-source</goal></goals>
+                        <configuration>
+                            <sources>
+                                <source>src/main/java9</source>
+                                <source>src/main/java11</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>
-                        --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
-                        --add-exports=java.base/jdk.internal.access=ALL-UNNAMED
-                        -Dfile.encoding=${encoding}
-                    </argLine>
+                    <!-- jdk9 -->
+<!--                    <argLine>-->
+<!--                        &#45;&#45;add-exports java.base/jdk.internal.misc=ALL-UNNAMED-->
+<!--                    </argLine>-->
+
+                    <!-- jdk11 -->
+<!--                    <argLine>-->
+<!--                        &#45;&#45;add-exports java.base/jdk.internal.access=ALL-UNNAMED-->
+<!--                    </argLine>-->
+                    <encoding>${encoding}</encoding>
                 </configuration>
             </plugin>
-            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgs>
+                        <!-- jdk9 -->
+<!--                        <arg>&#45;&#45;add-exports</arg><arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>-->
+                        <!-- jdk 11 -->
+<!--                        <arg>&#45;&#45;add-exports</arg><arg>java.base/jdk.internal.access=ALL-UNNAMED</arg>-->
+                    </compilerArgs>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
